[package]
name = "client"
version = "0.1.0"
authors = ["albysmith <48844001+albysmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "^0.6.0"

wasm-bindgen = "^0.2.55"


serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.46"
toml = "0.5.6"



[dependencies.web-sys]
version = "^0.3.32"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    
]
