[package]
name = "server"
version = "0.1.0"
authors = ["albysmith <48844001+albysmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.9"
actix-files = "0.1.7"
actix-multipart = "0.1.5"
tokio-timer = "0.2.12"
log = "0.4.8"
env_logger = "0.7.1"
log4rs = "0.10.0"
slog = "2.5.2"
slog-stdlog = "4.0.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"
slog-envlogger = "2.2.0"
slog-async = "2.4.0"